test_suite/ui/multiple_bits.stderr
error: Flags must have exactly one set bit
 --> $DIR/multiple_bits.rs:5:20
  |
5 |     MultipleBits = 6,
  |                    ^
